<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="410sp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:layout_width="100sp"
        android:layout_height="75sp"
        android:layout_gravity="left"
        android:src="@drawable/logotra"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/helloChefText"
            android:textColor="@color/myOrande"/>
        <TextView
            android:id="@+id/nomChefTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17sp"
            android:textColor="@color/myBlue"/>
    </LinearLayout>
    <Button
        android:id="@+id/affectTacheButton"
        android:layout_marginTop="55sp"
        android:layout_gravity="center_horizontal"
        android:layout_width="320sp"
        android:backgroundTint="@color/myOrande"
        android:text="@string/affectTacheButton"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/consultListMemberButton"
        android:layout_marginTop="15sp"
        android:layout_gravity="center_horizontal"
        android:layout_width="320sp"
        android:backgroundTint="@color/myBlue"
        android:text="@string/consultListMemberButton"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/addMemberHButton"
        android:layout_marginTop="15sp"
        android:layout_gravity="center_horizontal"
        android:layout_width="320sp"
        android:backgroundTint="@color/myOrande"
        android:text="@string/addMemberButton"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/consultCalendarButton"
        android:layout_marginTop="15sp"
        android:layout_gravity="center_horizontal"
        android:layout_width="320sp"
        android:backgroundTint="@color/myBlue"
        android:text="@string/consultCalendarButton"
        android:layout_height="wrap_content"/>
</LinearLayout>