<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="410sp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
            android:layout_width="100sp"
            android:layout_height="75sp"
            android:layout_gravity="left"
            android:src="@drawable/logotra"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/titleforchef" />
    <LinearLayout
        android:layout_width="410sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45sp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25sp"
            android:text="@string/nomText"/>
        <EditText
            android:id="@+id/nomChefEditText"
            android:layout_width="70sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:text="@string/prenomText"/>
        <EditText
            android:id="@+id/prenomChefEditText"
            android:layout_width="70sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="410sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25sp"
            android:text="@string/emailText"/>
        <EditText
            android:id="@+id/emailChefEditText"
            android:layout_width="70sp"
            android:inputType="textEmailSubject"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:text="@string/naissanceChefText" />

        <DatePicker
            android:id="@+id/naissanceChefdatePicker"
            android:layout_width="wrap_content"
            android:layout_height="97dp"
            android:layout_marginStart="15sp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="410sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25sp"
            android:text="@string/passwordText"/>
        <EditText
            android:id="@+id/PassChefEditText"
            android:layout_width="70sp"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:text="@string/confPassChefText"/>
        <EditText
            android:id="@+id/confPassChefEditText"
            android:layout_width="70sp"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"/>
    </LinearLayout>
    <Button
        android:id="@+id/nextChefRegisButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:layout_gravity="right"
        android:text="@string/nextChefRegisButton"/>

</LinearLayout>