<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12sp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="100sp"
            android:layout_height="75sp"
            android:src="@drawable/logotra"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30sp"
        android:layout_marginTop="49sp"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emailText"/>
        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20sp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwordText"/>
        <EditText
            android:id="@+id/passwordEditText"
            android:inputType="textPassword"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="right"
        android:layout_marginTop="20sp">
        <Button
            android:id="@+id/loginButton"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:text="@string/submitButton"/>


    </LinearLayout>
    </LinearLayout>
</LinearLayout>

