<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="100sp"
            android:layout_height="75sp"
            android:layout_gravity="left"
            android:layout_marginTop="2sp"
            android:src="@drawable/logotra" />

        <Button
            android:id="@+id/loginButton"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="118sp"
            android:layout_width="85sp"
            android:layout_height="45sp"
            android:text="@string/cnxButton" />
        <Button
            android:id="@+id/registerButton"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="10sp"
            android:layout_width="95sp"
            android:layout_height="45sp"
            android:text="@string/registerButton" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32sp"
            android:layout_marginTop="5sp"
            android:src="@drawable/mission"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="250sp"
        android:layout_height="168dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0sp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="250sp"
            android:layout_height="200sp"
            android:src="@drawable/famille" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:src="@drawable/ins"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">
        <Button
            android:id="@+id/regisButton"
            android:layout_marginTop="2sp"
            android:layout_marginLeft="10sp"
            android:layout_width="170sp"
            android:layout_height="75sp"
            android:text="@string/regisButton" />

    </LinearLayout>

</LinearLayout>